--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.surenpi.autotest</groupId>
     <artifactId>autotest.webui</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-20170706</version>
 
     <build>
         <plugins>
@@ -32,7 +32,7 @@
         <dependency>
             <groupId>com.surenpi.autotest</groupId>
             <artifactId>autotest.datasource</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0.0-20170706</version>
         </dependency>
 
         <dependency>
