1.修改为快照版本；2.增加根据属性来定位的定位符

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     </parent>
 
     <artifactId>autotest.webui</artifactId>
-    <version>1.0.0-20170722</version>
+    <version>1.0.0-20170722-SNAPSHOT</version>
     
 	<build>
 		<plugins>
