--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>autotest.datasource</artifactId>
             <version>1.0.0-20170706</version>
         </dependency>
+        <dependency>
+        	<groupId>com.surenpi.autotest</groupId>
+        	<artifactId>autotest.utils</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
